menu: Fix invisible footer text in night mode

--- a/src/less/theme.less
+++ b/src/less/theme.less
@@ -39,7 +39,7 @@ html[data-theme=night] {
 
   // Light text
   .button span, #grades p, a,
-  #grades h2, #levels select, #menu {
+  #grades h2, #levels select, #menu .menu {
     color: @white !important;
   }
 
